--- a/gpo2/ClientApp/src/components/NavMenu.css
+++ b/gpo2/ClientApp/src/components/NavMenu.css
@@ -1,58 +1,47 @@
-﻿.navbar li .glyphicon {
-    margin-right: 10px;
+﻿
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
 }
 
-/* Highlighting rules for nav menu items */
-.navbar .navbar-nav .active a,
-.navbar .navbar-nav .active a:hover,
-.navbar .navbar-nav .active a:focus {
-    background-image: none;
-    background-color: #4189C7;
-    color: white;
+.form-signup {
+    width: 100%;
+    max-width: 580px;
+    padding: 15px;
+    margin: auto;
 }
 
-@media (min-width: 768px) {
-    /* On large screens, convert the nav menu to a vertical sidebar */
-    .navbar {
-        height: 100%;
-        width: calc(25% - 20px);
+    .form .checkbox {
+        font-weight: 400;
     }
-    .navbar {
-        border-radius: 0;
-        border-width: 0;
-        height: 100%;
+
+    .form .form-control {
+        position: relative;
+        box-sizing: border-box;
+        height: auto;
+        padding: 10px;
+        font-size: 16px;
     }
-    .navbar-header {
-        float: none;
+
+
+        .form .form-control:focus {
+            z-index: 2;
+        }
+
+    .form-signin input[type="email"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
     }
-    .navbar .navbar-collapse {
-        border-top: 1px solid #444;
-        padding: 0;
+
+    .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
     }
-    .navbar .container-fluid {
-        padding: 0;
-        margin: 0;
-    }
-    .navbar .container-fluid .navbar-brand {
-        margin: 0;
-    }
-    .navbar ul {
-        float: none;
-    }
-    .navbar li {
-        float: none;
-        font-size: 15px;
-        margin: 6px;
-    }
-    .navbar li a {
-        padding: 10px 16px;
-        border-radius: 4px;
-    }
-    .navbar a {
-        /* If a menu item's text is too long, truncate it */
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.form label {
+    margin-top: 10px;
 }
