made reg and auth by certificate
delete email from login

--- a/gp0/gp0/Views/Home/login.cshtml
+++ b/gp0/gp0/Views/Home/login.cshtml
@@ -46,9 +46,10 @@
             <script language="javascript">
                 CheckForPlugIn('isPlugInEnabled');
             </script>
-            <button class="btn btn-lg btn-primary btn-block" onclick="LoginCertificate('CertListBox')"> Sign Certificate </button>
+            <button class="btn btn-lg btn-primary btn-block" onclick="AuthCertificate('CertListBox','Login')"> Sign Certificate </button>
             <textarea name="SignedXml" id="SignatureTxtBox" readonly hidden style="font-size:9pt;height:600px;width:100%;resize:none;border:0"></textarea>
-            <<p class="info_field" id="Success"></p>
+            <p class="info_field" id="Success1"></p>
+            <p class="info_field" id="Time1"></p>
         </div>
 
 
