--- a/gp0/gp0/Views/Home/Registration.cshtml
+++ b/gp0/gp0/Views/Home/Registration.cshtml
@@ -7,7 +7,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autoFocus />
         <input name="login" type="text" id="inputLogin" class="form-control" placeholder="Login" required autoFocus />
-        <input name="password" id="inputPassword" class="form-control" placeholder="Password" required />
+        <input name="password" id="inputPassword" class="form-control" placeholder="Password" type="password" required />
         <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
     </form>
     <div id="panel1" class="tab-pane active">
