Copy auth to new contoller

--- a/gp0/gp0/Views/Shared/HomeLayout.cshtml
+++ b/gp0/gp0/Views/Shared/HomeLayout.cshtml
@@ -20,9 +20,9 @@
 </head>
 <body>
     <ul class="nav navbar-nav">
-        <li><a asp-area="" asp-controller="Home" asp-action="Logout">Login out</a></li>
-        <li><a >Вход</a></li>
-        <li><a >исход</a></li>
+        <li><a asp-area="" asp-controller="Auth" asp-action="Logout">Выход</a></li>
+        <li><a >Входящие</a></li>
+        <li><a >Исходящие</a></li>
         <li id="info_msg">
                 <a href="#" id="PlugInEnabledTxt">Проверка</a>
                 <script language="javascript">
