--- a/gp0/gp0/Views/Shared/LoginLayout.cshtml
+++ b/gp0/gp0/Views/Shared/LoginLayout.cshtml
@@ -40,8 +40,8 @@
     <partial name="_CookieConsentPartial" />
         -->
     <ul class="nav navbar-nav">
-        <li><a asp-area="" asp-controller="Home" asp-action="login">Login</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="Registration">Singin</a></li>
+        <li><a asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a></li>
+        <li><a asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a></li>
     </ul>
     <br />
     <div class="container body-content">
