--- a/gp0/gp0/Views/Auth/Registration.cshtml
+++ b/gp0/gp0/Views/Auth/Registration.cshtml
@@ -1,15 +1,21 @@
 ﻿@{
     ViewData["Title"] = "Registration";
 }
+<br />
 <div>
     <form class="form-signin  form" asp-controller="Auth" asp-action="Registration" method="post" role="form">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
         <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autoFocus />
+        <br />
         <input name="login" type="text" id="inputLogin" class="form-control" placeholder="Login" required autoFocus />
+        <br />
         <input name="password" id="inputPassword" class="form-control" placeholder="Password" type="password" required />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+        <br />
+        <button class="btn btn-secondary btn-block" type="submit">Register</button>
     </form>
-    <div id="panel1" class="tab-pane active">
+    <hr />
+    <div >
         <p id="info_msg" name="CertificateTitle">Сертификат:</p>
         <div id="item_border" name="CertListBoxToHide">
             <select size="4" name="CertListBox" id="CertListBox" style="width:100%;resize:none;border:0;"></select>
@@ -33,8 +39,9 @@
         <script language="javascript">
             CheckForPlugIn('isPlugInEnabled');
         </script>
-        <input name="emailCertificate" type="email" id="emailCertificate" class="form-control" placeholder="Email address" required autoFocus />
-        <button class="btn btn-lg btn-primary btn-block" onclick="AuthCertificate('CertListBox','Registration');"> Register Certificate </button>
+        <input name="emailCertificate" type="email" id="emailCertificate" class="form-control" placeholder="Email address" required  />
+        <br />
+        <button class="btn btn-secondary btn-block" onclick="AuthCertificate('CertListBox','Registration');"> Register Certificate </button>
         <p class="info_field" id="Success1"></p>
     </div>
 </div>
