--- a/gp0/gp0/Views/Shared/LoginLayout.cshtml
+++ b/gp0/gp0/Views/Shared/LoginLayout.cshtml
@@ -19,10 +19,30 @@
     </environment>
 </head>
 <body>
+    <!--
     <ul class="nav navbar-nav">
         <li><a asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a></li>
         <li><a asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a></li>
     </ul>
+        -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                    <a class="nav-link" asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <br />
     <div class="container body-content">
         @RenderBody()
