Made out and in document's controllers
Надо чтобы нажимаешь на сообщение, оно открывалось полностью и была инфа о сертификате

--- a/gp0/gp0/Views/Home/Home.cshtml
+++ b/gp0/gp0/Views/Home/Home.cshtml
@@ -7,9 +7,9 @@
     <thead class="thead-light">
     <tr>
         <th scope="col">#</th>
-        <th scope="col">Message</th>
-        <th scope="col">Sender</th>
-        <th scope="col">Chto-to ewe</th>
+        <th scope="col">Отправитель</th>
+        <th scope="col">Дата</th>
+        <th scope="col">Сообщение</th>
     </tr>
     </thead>
     <tbody>
@@ -17,9 +17,9 @@
     {
         <tr>
             <th scope="row"></th>
-            <td>@doc.id</td>
-            <td>@doc.idReceiver</td>
-            <td>@doc.idSender</td>
+            <td>@doc.sender</td>
+            <td>@doc.date</td>
+            <td>@doc.text</td>
         </tr>
     }
     </tbody>
