--- a/gp0/gp0/Views/Shared/LoginLayout.cshtml
+++ b/gp0/gp0/Views/Shared/LoginLayout.cshtml
@@ -24,7 +24,31 @@
         <li><a asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a></li>
         <li><a asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a></li>
     </ul>
-    <br />
+<br />
+<script language="javascript">
+    var canPromise = !!window.Promise;
+    if (canPromise) {
+        cadesplugin.then(function () {
+                Common_CheckForPlugIn();
+            },
+            function (error) {
+                //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                //document.getElementById('PlugInEnabledTxt').innerHTML = error;
+            }
+        );
+    } else {
+        window.addEventListener("message", function (event) {
+                if (event.data == "cadesplugin_loaded") {
+                    CheckForPlugIn('isPlugInEnabled');
+                } else if (event.data == "cadesplugin_load_error") {
+                    //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                    //document.getElementById('PlugInEnabledTxt').innerHTML = "Плагин не загружен";
+                }
+            },
+            false);
+        window.postMessage("cadesplugin_echo_request", "*");
+    }               
+</script>
     <div class="container body-content">
         @RenderBody()
     </div>
