--- a/gp0/gp0/Views/Shared/HomeLayout.cshtml
+++ b/gp0/gp0/Views/Shared/HomeLayout.cshtml
@@ -20,6 +20,60 @@
     </environment>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Home">Входящие</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OutDocuments">Исходящие</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link asp-area="" asp-controller="Home" asp-action="SendDoc">Отправить документ</a>
+                </li>
+                <li id="info_msg">
+                    <a class="nav-link" href="#" id="PlugInEnabledTxt">Проверка</a>
+                    <script language="javascript">
+                        var canPromise = !!window.Promise;
+                        if (canPromise) {
+                            cadesplugin.then(function () {
+                                Common_CheckForPlugIn();
+                            },
+                                function (error) {
+                                    //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                                    //document.getElementById('PlugInEnabledTxt').innerHTML = error;
+                                }
+                            );
+                        } else {
+                            window.addEventListener("message", function (event) {
+                                if (event.data == "cadesplugin_loaded") {
+                                    CheckForPlugIn('isPlugInEnabled');
+                                } else if (event.data == "cadesplugin_load_error") {
+                                    //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                                    //document.getElementById('PlugInEnabledTxt').innerHTML = "Плагин не загружен";
+                                }
+                            },
+                                false);
+                            window.postMessage("cadesplugin_echo_request", "*");
+                        }
+                    </script>
+
+                </li>
+            </ul>
+
+            <span class="nav-item">
+                <a class="nav-link" style="color: rgba(0, 0, 0, 0.5)" asp-area="" asp-controller="Auth" asp-action="Logout">Выход</a>
+            </span>
+        </div>
+
+    </nav>
+    <br />
+    <!--
     <ul class="nav navbar-nav">
         <li><a asp-area="" asp-controller="Auth" asp-action="Logout">Выход</a></li>
         <li><a asp-area="" asp-controller="Home" asp-action="Home">Входящие</a></li>
@@ -31,8 +85,8 @@
                 var canPromise = !!window.Promise;
                 if (canPromise) {
                     cadesplugin.then(function () {
-                            Common_CheckForPlugIn();
-                        },
+                        Common_CheckForPlugIn();
+                    },
                         function (error) {
                             //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
                             //document.getElementById('PlugInEnabledTxt').innerHTML = error;
@@ -40,32 +94,33 @@
                     );
                 } else {
                     window.addEventListener("message", function (event) {
-                            if (event.data == "cadesplugin_loaded") {
-                                CheckForPlugIn('isPlugInEnabled');
-                            } else if (event.data == "cadesplugin_load_error") {
-                                //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
-                                //document.getElementById('PlugInEnabledTxt').innerHTML = "Плагин не загружен";
-                            }
-                        },
+                        if (event.data == "cadesplugin_loaded") {
+                            CheckForPlugIn('isPlugInEnabled');
+                        } else if (event.data == "cadesplugin_load_error") {
+                            //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                            //document.getElementById('PlugInEnabledTxt').innerHTML = "Плагин не загружен";
+                        }
+                    },
                         false);
                     window.postMessage("cadesplugin_echo_request", "*");
-                }               
+                }
             </script>
 
         </li>
     </ul>
-<br />
-<br />
-<div id="min-width" >
-    <div id="container">
-        <div class="mainContent">
-            
-                
-            
-        </div>
-    </div>
+        -->
+   
+    <br />
+    <div id="min-width">
+        <div id="container">
+            <div class="mainContent">
 
-</div>
+
+
+            </div>
+        </div>
+
+    </div>
     <div class="container body-content">
         @RenderBody()
     </div>
