--- a/gp0/gp0/Views/Shared/LoginLayout.cshtml
+++ b/gp0/gp0/Views/Shared/LoginLayout.cshtml
@@ -20,24 +20,41 @@
     </environment>
 </head>
 <body>
+    <!--
     <ul class="nav navbar-nav">
         <li><a asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a></li>
         <li><a asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a></li>
     </ul>
-<br />
-<script language="javascript">
-    var canPromise = !!window.Promise;
-    if (canPromise) {
-        cadesplugin.then(function () {
+        -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                    <a class="nav-link" asp-area="" asp-controller="Auth" asp-action="login">Авторизация</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Auth" asp-action="Registration">Регистрация</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <br />
+    <script language="javascript">
+        var canPromise = !!window.Promise;
+        if (canPromise) {
+            cadesplugin.then(function () {
                 Common_CheckForPlugIn();
             },
-            function (error) {
-                //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
-                //document.getElementById('PlugInEnabledTxt').innerHTML = error;
-            }
-        );
-    } else {
-        window.addEventListener("message", function (event) {
+                function (error) {
+                    //document.getElementById('PluginEnabledImg').setAttribute("src", "Img/red_dot.png");
+                    //document.getElementById('PlugInEnabledTxt').innerHTML = error;
+                }
+            );
+        } else {
+            window.addEventListener("message", function (event) {
                 if (event.data == "cadesplugin_loaded") {
                     CheckForPlugIn('isPlugInEnabled');
                 } else if (event.data == "cadesplugin_load_error") {
@@ -45,10 +62,10 @@
                     //document.getElementById('PlugInEnabledTxt').innerHTML = "Плагин не загружен";
                 }
             },
-            false);
-        window.postMessage("cadesplugin_echo_request", "*");
-    }               
-</script>
+                false);
+            window.postMessage("cadesplugin_echo_request", "*");
+        }
+    </script>
     <div class="container body-content">
         @RenderBody()
     </div>
