--- a/gp0/gp0/Views/Shared/HomeLayout.cshtml
+++ b/gp0/gp0/Views/Shared/HomeLayout.cshtml
@@ -34,7 +34,7 @@
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OutDocuments">Исходящие</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link asp-area="" asp-controller="Home" asp-action="SendDoc">Отправить документ</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SendDoc">Отправить документ</a>
                 </li>
                 <li id="info_msg">
                     <a class="nav-link" href="#" id="PlugInEnabledTxt">Проверка</a>
