--- a/gp0/gp0/Views/Home/SendDoc.cshtml
+++ b/gp0/gp0/Views/Home/SendDoc.cshtml
@@ -1,22 +1,23 @@
-﻿
-@{
+﻿@{
     Layout = "HomeLayout";
 }
 <!DOCTYPE html>
-<div class="tab-content">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in with certificate</h1>
+<div>
+<div class="table-borderless">
     <div id="panel1" class="tab-pane active">
-        <p id="info_msg" name="CertificateTitle">Сертификат:</p>
-        <div id="item_border" name="CertListBoxToHide">
-            <select size="4" name="CertListBox" id="CertListBox" style="width:100%;resize:none;border:0;"></select>
+        <div class="divTableCell">
+            <h3 id="info_msg" name="CertificateTitle">Выберите сертификат:</h3>
+            <div id="item_border" name="CertListBoxToHide">
+                <select size="10" name="CertListBox" id="CertListBox" style="width: 100%; resize: none; border: 1;"></select>
+            </div>
+            <div id="boxdiv" style="display: none">
+                <span id="errorarea">
+                    У вас отсутствуют личные сертификаты. Вы можете получить сертификат от тестового УЦ, предварительно установив корневой сертификат тестового УЦ в доверенные.
+                </span>
+            </div>
         </div>
-        <div id="boxdiv" style="display:none">
-            <span id="errorarea">
-                У вас отсутствуют личные сертификаты. Вы можете получить сертификат от тестового УЦ, предварительно установив корневой сертификат тестового УЦ в доверенные.
-            </span>
-        </div>
-        <div id="cert_info">
-            <h3 id="cert_txt" style="visibility:hidden">Информация о сертификате</h3>
+        <div id="cert_info" class="divTableCell">
+            <h3 id="cert_txt" style="visibility: hidden">Информация о сертификате:</h3>
             <p class="info_field" id="subject"></p>
             <p class="info_field" id="issuer"></p>
             <p class="info_field" id="from"></p>
@@ -25,16 +26,15 @@
             <p class="info_field" id="algorithm"></p>
             <p class="info_field" id="status"></p>
         </div>
-        <br />
-        <p id="info_msg">Введите email получателя</p>
-        <textarea id="ReceiverEmail" name="ReceiverEmail" style="resize:none;border:1;"></textarea>
-    </div>
-    <p id="info_receiver">Данные для подписи:</p>
-    <div>
-        <textarea id="DataToSignTxtBox" name="DataToSignTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
-    </div>
-    <div>
-        <button id="SignBtn" name="SignData" type="button" class="btn btn-lg btn-primary btn-block" onclick="SendXml('CertListBox');">Подписать</button>
-        <p class="info_field" id="Success1"></p>
-    </div>
+    </div> 
+</div>
+    <hr>
+    <p>Получатель</p>
+    <input id="ReceiverEmail"/>
+<p id="info_receiver">Данные для подписи:</p>
+<div>
+    <textarea id="DataToSignTxtBox" name="DataToSignTxtBox" style="height:200px;width:100%;resize:none;border:1;"></textarea>
+</div>
+<button id="SignBtn" name="SignData" type="button" class="btn btn-lg btn-primary btn-block" onclick="SendXml('CertListBox');">Подписать</button>
+<p class="info_field" id="Success1"></p>
 </div>
