--- a/gp0/gp0/wwwroot/css/site.css
+++ b/gp0/gp0/wwwroot/css/site.css
@@ -35,3 +35,10 @@ body {
         display: none;
     }
 }
+.divTableCell{
+    border: 0;
+    display: table-cell;
+    padding-left: 10%;
+    height: 350px;
+    width: 40%;
+}
